add slider and update template in product page

--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -7,16 +7,23 @@ ion-view(
     .row
       form.product-detail(name="selectProductForm" ng-submit='productVm.selectProduct()')
         .list
-          img.format-image(src='{{productVm.product.image}}')
+          slick(settings="productVm.slickConfig")
+            .slick-container(ng-repeat="image in productVm.product.images track by $index")
+              .slick-content
+                .img(style="background-image: url('{{image}}')")
+          .description
+            .title
+              h4 {{productVm.product.name}}
+              .more-label
+                button.button.button-clear.button-energized(ng-click="productVm.showMore()")
+                  | {{(productVm.more) ? ("product.less"|translate) : ("product.more"|translate)}}
+            p {{productVm.product.description}}
           .add-product
             button.button.button-outline.button-energized
-              | Añadir al carrito
+              | {{::("product.addCar"|translate)}}
             button.button.button-outline.button-positive
-              | Añadir a mi whishlist
+              | {{::("product.addWishlist"|translate)}}
           .more-description
-            .more-label
-              button.button.button-clear.button-energized(ng-click="productVm.showMore()")
-                | more...
             .observations(ng-if="productVm.more")
               .large-description
                 h4 Descripción Larga
@@ -27,9 +34,9 @@ ion-view(
     .footer-product
       .left-panel
         button.button.button-outline.button-energized
-          | Comprar Ahora
+          | {{::("product.buyNow"|translate)}}
       .center-panel
-        a.button.button-icon.icon.ion-minus-circled(ng-click="productVm.updatePrice('remove')")
+        button.button-icon.icon.ion-minus-circled(ng-click="productVm.updatePrice('remove')")
         h2 X {{productVm.product.amount}}
         a.button.button-icon.icon.ion-plus-circled(ng-click="productVm.updatePrice('add')")
       .right-panel
