--- a/app/styles/products/show.scss
+++ b/app/styles/products/show.scss
@@ -1,9 +1,5 @@
 .product-detail{
   width: 100%;
-  .format-image{
-    width: 100%;
-    height: 250px;
-  }
   .add-product{
     display: flex;
     flex-direction: column;
@@ -13,14 +9,21 @@
       width: 50%;
     }
   }
-  .more-description{
+  .description{
     display: flex;
     flex-direction: column;
+    .title{
+      display: flex;
+    }
     .more-label{
       button{
         float: right;
       }
     }
+  }
+  .more-description{
+    display: flex;
+    flex-direction: column;
     textarea{
       width: 100%;
       background: #f8f8f8;
@@ -28,6 +31,16 @@
     .observations{
       .large-description{
         background: #f8f8f8;
+      }
+    }
+  }
+  .slick-container{
+    margin-top: 30px;
+    .slick-content {
+      .img {
+        margin: auto;
+        width: 200px;
+        height: 200px;
       }
     }
   }
