--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import "common/buttons";
 @import "common/bar-footer";
 @import "common/input_icons";
+@import "common/search-input";
 @import "common/grid";
 @import "forms/general";
 @import "forms/inputs";
