--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -2,6 +2,9 @@ $white: #fff;
 $base-yellow: #FDC30D;
 $base-blue: #9ecaed;
 $base-grey: #6A6A6D;
+$button-red: #D0021B;
+$search-label-grey: #C3C3C3;
+$search-input-grey: #CCCCCC;
 $facebook-blue: #2770a3;
 $error-red: #cc0000;
 $light-blue: #5AA3E8
