--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -18,7 +18,9 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("client.clients"|translate)}}
         ion-item(menu-close='' ui-sref='app.map')
           | {{::("menu.location"|translate)}}
-        ion-item(menu-close='' ui-sref='app.provider.welcome')
+        ion-item(menu-close=''  ui-sref='app.provider.welcome', ng-if='!user.provider_profile')
+          | {{::("menu.provider"|translate)}}
+        ion-item(menu-close=''  ui-sref='provider.items', ng-if='user.provider_profile')
           | {{::("menu.provider"|translate)}}
         ion-item(menu-close='' ui-sref='app.products.index')
           | {{::("menu.products"|translate)}}
