Specs for customers (#70)
* Code refactoring

* Code Refactoring

* Code Refactoring

* Add initial spec

* Add final spec for customers

* Changes in styles

* Add spec for service of client

* Add changes

* Changes

* Corrections

* Changes

--- a/app/templates/client/clients.jade
+++ b/app/templates/client/clients.jade
@@ -18,23 +18,21 @@ ion-view(
       ) {{::("globals.new"|translate)}} {{::("client.client"|translate)}}
     .row.list-header
       .col.col-50.list-title {{::("client.clientName"|translate)}}
-      .col.list-title {{::("client.id"|translate)}}
-      .col.col-33
-        .list
-          label.item.item-input.item-select.label-select
-            {{::("client.sortBy"|translate)}}
-            select(
-              ng-model="selectedOption"
-              ng-options="x.option for x in clientsVm.listOptions"
-            )
+      .col
+        item.item-input.item-select.select-position-adjust
+          select(
+            ng-model="selectedOption"
+            ng-options="option.name for option in clientsVm.listOptions"
+          )
+            option(value="") Ordenar por
     .row.list-content(
       ng-repeat="client in clientsVm.clients | filter:clientsVm.query | orderBy:selectedOption.filterField"
+      ng-init="idx = $index"
     )
-      .col.col-50.list-item {{ client.nombres }}
-      .col.list-item {{ client.id }}
-      a(
-        ng-click="clientsVm.showEditModal(client)"
-      ).col.col.33 {{::("globals.edit"|translate)}}
+      .col.col-75.list-item {{ client.nombres }}
+      a.col.action(
+        ng-click="clientsVm.showEditModal(idx)"
+      ) {{::("globals.edit"|translate)}}
   .bar.bar-footer.footer-client-container
     button.button-secondary-yellow {{::("client.import"|translate)}}
     button.button-secondary-yellow {{::("client.export"|translate)}}
