--- a/app/styles/client/client.scss
+++ b/app/styles/client/client.scss
@@ -6,6 +6,7 @@
     padding: 0;
     .list-title{
       color: #666;
+      font-size: 0.9em;
       text-transform: uppercase;
     }
   }
@@ -13,6 +14,10 @@
     margin: 5px 0;
     .list-item{
       color: $base-grey;
+    }
+    .action{
+      margin-right: 15px;
+      text-align: right;
     }
   }
   .client-add-icon {
@@ -25,6 +30,13 @@
     border-bottom: none;
     margin-bottom: 0;
     padding: 0;
+  }
+  .item-select select {
+    line-height: 1.1;
+    max-width: 100%;
+  }
+  .select-position-adjust {
+    height: 15px;
   }
   .bar-base-yellow{
     background-color: $base-yellow !important;
@@ -42,10 +54,10 @@
     height: 30px;
     line-height: normal;
     margin: 0 10px;
-    padding: 0;
+    padding: 0 20px;
     text-align: center;
     text-transform: uppercase;
-    width: 130px;
+    width: auto;
   }
   .button-secondary-yellow {
     @extend .button-secondary;
