--- a/app/templates/directives/show-error/show-error.jade
+++ b/app/templates/directives/show-error/show-error.jade
@@ -1,3 +1,7 @@
 div(ng-if='seVm.arrayMessages.length > 0')
   div(ng-repeat='message in seVm.arrayMessages track by $index' class='show-errors')
     span(class='message-error') {{ message }}
+
+div(ng-if='seVm.element && (seVm.element.$touched && seVm.element.$error.required)')
+  .show-errors
+    span(class='message-error') {{ seVm.message }}
