--- a/app/styles/item/item.scss
+++ b/app/styles/item/item.scss
@@ -1,38 +1,44 @@
 .item-page{
   .item-title {
-    font-family: Montserrat-Light;
-    font-weight: normal;
-    padding-top: 10px;
-    margin-bottom: 15px;
+    color: #666;
+    font-size: 15px;
+    font-weight: bold;
+    margin: 5px 0 -10px 0;
     text-align: left;
     text-transform: uppercase;
+    width: 100%;
   }
 
-  .item-add-icon {
-    cursor: pointer;
-    display: flex;
-    font-size: 35px;
-    justify-content: center;
-    flex-direction: column;
-    text-align: right;
+  .bar-base-yellow{
+    background-color: $base-yellow !important;
   }
 
-  .item-form-container {
-    margin: auto;
-    margin-top: 0px;
-    width: 90%;
+  .title{
+    color: $white !important;
   }
 
-  .item-input-label-lg {
-    display: table;
-    padding: 7px 10px 7px 0px;
-    max-width: 200px;
-    width: 90%;
-    color: #888;
-    font-size: 16px;
+  .list-large {
+    margin-top: 15px;
+    width: 100%;
   }
+}
 
-  .item-square-img {
-    width: 40px;
+.footer-item-container {
+  display: block;
+  text-align: center;
+  .button-secondary {
+    background-color: $white;
+    height: 30px;
+    line-height: normal;
+    margin: 10px;
+    padding: 0 20px;
+    text-align: center;
+    text-transform: uppercase;
+    width: auto;
+  }
+  .button-secondary-yellow {
+    @extend .button-secondary;
+    border: 3px solid $base-yellow;
+    color: $base-yellow;
   }
 }
