--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -22,6 +22,8 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.provider"|translate)}}
         ion-item(menu-close=''  ui-sref='provider.items', ng-if='user.provider_profile')
           | {{::("menu.provider"|translate)}}
+        ion-item(menu-close='' ui-sref='app.courier.welcome')
+          | {{::("menu.courier"|translate)}}
         ion-item(menu-close='' ui-sref='app.products.index')
           | {{::("menu.products"|translate)}}
         ion-item(ng-controller='LoginController as loginVm', ng-click='loginVm.logout()')
