Use backend images (#78)

--- a/app/styles/categories/index.scss
+++ b/app/styles/categories/index.scss
@@ -23,8 +23,9 @@
 
     .title{
       text-transform: uppercase;
-      font-family: Montserrat-Regular;
+      font-family: Montserrat-Bold;
       color: $white;
+      text-align: center;
     }
   }
 }
