--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -9,6 +9,7 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
       h1.title Left
     ion-content
+      a(menu-close ui-sref='app.profile') {{::("user.showProfile"|translate)}}
       ion-list
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.category"|translate)}}
