Improvements for 'select product' view

--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -7,4 +7,5 @@ $search-label-grey: #C3C3C3;
 $search-input-grey: #CCCCCC;
 $facebook-blue: #2770a3;
 $error-red: #cc0000;
-$light-blue: #5AA3E8
+$light-blue: #5AA3E8;
+$light-green: #8DD63C;
