--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
 @import "provider/detail";
 @import "directives/back-button";
 @import "directives/show-error";
+@import "directives/product-counter";
 @import "categories/index";
 @import "categories/show";
 @import "item/item";
