--- a/app/templates/category/show.jade
+++ b/app/templates/category/show.jade
@@ -10,7 +10,7 @@ ion-view(
     .category-description {{categoryVm.category.descripcion}}
     slick(settings="categoryVm.slickConfig")
       .slick-container(ng-repeat="provider in categoryVm.providers")
-        .slick-content(ui-sref='app.categories.provider({category_id: categoryVm.category.id, id: provider.id })')
+        .slick-content(ui-sref='app.categories.provider({category_id: categoryVm.category.id, provider_id: provider.id })')
           .provider-card
             .img(style="background-image: url('{{provider.imagen|defaultImage:'../images/ionic.png'}}')")
             .provider-card-footer
