--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -8,16 +8,16 @@ ion-view(
       form.product-detail(name="selectProductForm" ng-submit='productVm.selectProduct()')
         .list
           slick(settings="productVm.slickConfig")
-            .slick-container(ng-repeat="image in productVm.product.images track by $index")
+            .slick-container(ng-repeat="image in productVm.product.imagenes track by $index")
               .slick-content
-                .img(style="background-image: url('{{image}}')")
+                .img(style="background-image: url('{{image.imagen_url}}')")
           .description
             .title
-              h4 {{productVm.product.name}}
+              h4 {{productVm.product.titulo}}
               .more-label
                 button.button.button-clear.button-energized(ng-click="productVm.toggleShow()")
                   | {{(productVm.more) ? ("product.less"|translate) : ("product.more"|translate)}}
-            p {{productVm.product.description}}
+            p {{productVm.product.descripcion}}
           .add-product
             button.button.button-outline.button-energized
               | {{::("product.addCar"|translate)}}
@@ -29,15 +29,11 @@ ion-view(
                 h4 Descripción Larga
                 p {{productVm.product.more}}
               h4 Observaciones
-              textarea(ng-model='productVm.product.user_notes')
+              textarea(ng-model='productVm.product.observaciones')
   ion-footer-bar.bar-stable(align-title='center')
     .footer-product
       .left-panel
         button.button.button-outline.button-energized
           | {{::("product.buyNow"|translate)}}
       .center-panel
-        button.button-icon.icon.ion-minus-circled(ng-click="productVm.updatePrice('remove')")
-        h2 X {{productVm.product.amount}}
-        a.button.button-icon.icon.ion-plus-circled(ng-click="productVm.updatePrice('add')")
-      .right-panel
-        h2 ${{productVm.product.totalPrice}}
+        product-counter(options="productVm.options")
