--- a/app/templates/menu/menu-courier.jade
+++ b/app/templates/menu/menu-courier.jade
@@ -9,20 +9,14 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
+        ion-item
+          | {{::("menu.courier.orders"|translate)}}
         ion-item  
-          | {{::("menu.provider.orders"|translate)}}
-        ion-item(menu-close=''  ui-sref='app.items.index')
-          | {{::("menu.provider.products"|translate)}}
+          | {{::("menu.courier.account"|translate)}}
         ion-item  
-          | {{::("menu.provider.account"|translate)}}
+          | {{::("menu.courier.payments"|translate)}}
         ion-item  
-          | {{::("menu.provider.dispatchers"|translate)}}
-        ion-item  
-          | {{::("menu.provider.establishments"|translate)}}
-        ion-item  
-          | {{::("menu.provider.promotionsAndDiscounts"|translate)}}
-        ion-item  
-          | {{::("menu.provider.moviggoAdvertising"|translate)}}
+          | {{::("menu.courier.history"|translate)}}
         ion-item  
           | {{::("menu.invite"|translate)}}
         ion-item.gray-item 
